// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form|Phone Input Basic 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c6 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c3 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 > .input > input,
.select__search .c3 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c3 > .input > textarea {
  padding: 16px;
}

.c3 > .input > input,
.c3 > .input > textarea,
.select__search .c3 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c3 > .input > input::-webkit-input-placeholder,
.c3 > .input > textarea::-webkit-input-placeholder,
.select__search .c3 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input::-moz-placeholder,
.c3 > .input > textarea::-moz-placeholder,
.select__search .c3 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input:-ms-input-placeholder,
.c3 > .input > textarea:-ms-input-placeholder,
.select__search .c3 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input::placeholder,
.c3 > .input > textarea::placeholder,
.select__search .c3 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input[type="search"],
.c3 > .input > textarea[type="search"],
.select__search .c3 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c3 > .input > input[type="search"]::-webkit-search-cancel-button,
.c3 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c3 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c3 > .input > input[type="search"]::-ms-clear,
.c3 > .input > textarea[type="search"]::-ms-clear,
.select__search .c3 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c3 > .input > input[role="combobox"],
.c3 > .input > textarea[role="combobox"],
.select__search .c3 > .input input[role="combobox"] {
  cursor: pointer;
}

.c3 > .input > .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c3 > .input > .icon.left {
  margin-left: 16px;
}

.c3 > .input > .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c3 > .input > .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c3 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c3 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c3 .input.dropdown {
  cursor: pointer;
}

.c3 input[type="number"] {
  -moz-appearance: textfield;
}

.c3 input[type="number"]::-webkit-inner-spin-button,
.c3 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3 .prefix,
.c3 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c2 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 #cancel-button {
  margin: 0 8px;
}

.c0 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c4 {
  display: inline-block;
  width: auto;
}

.c4 .appear-enter {
  opacity: 0;
}

.c4 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c4 .appear-exit {
  opacity: 1;
}

.c4 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c5 {
  padding: 0 4px 0 8px;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c1 .input {
  overflow: unset;
}

.c1 .prefix {
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 3px 0 0 3px;
}

.c1 .prefix .popover__trigger {
  height: 100%;
}

@media only screen and (max-width:) {
  .c1 .input input {
    font-size: 16px;
  }
}

<div
  style={
    Object {
      "height": 400,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="wrapped c3"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
            onMouseDown={[Function]}
          >
            <div
              className="prefix"
            >
              <div
                className="c4"
                width="auto"
              >
                <div
                  className="popover__trigger"
                  id="trigger"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="c5"
                    disabled={false}
                  >
                    US 
                    +
                    1
                    <svg
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m12 12.5857864 3.2928932-3.29289318c.3905243-.39052429 1.0236893-.39052429 1.4142136 0s.3905243 1.02368928 0 1.41421358l-4 4c-.3905243.3905243-1.0236893.3905243-1.4142136 0l-3.99999998-4c-.39052429-.3905243-.39052429-1.02368929 0-1.41421358s1.02368927-.39052429 1.41421356 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <input
              className="wrapped"
              data-testid="national-number-input"
              disabled={false}
              inputMode="tel"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInvalid={[Function]}
              type="text"
              value="(213) 373-4253"
            />
          </div>
          <div
            className="label"
          >
            <div
              className="labelText c6 c7"
              fontWeight="title"
              letterSpacing="2px"
              size={14}
              type="#2f313a"
            >
              Phone
            </div>
          </div>
        </div>
      </div>
      <div
        className="messagesContainer"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Form|Phone Input Changing Default Country 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c3 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 > .input > input,
.select__search .c3 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c3 > .input > textarea {
  padding: 16px;
}

.c3 > .input > input,
.c3 > .input > textarea,
.select__search .c3 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c3 > .input > input::-webkit-input-placeholder,
.c3 > .input > textarea::-webkit-input-placeholder,
.select__search .c3 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input::-moz-placeholder,
.c3 > .input > textarea::-moz-placeholder,
.select__search .c3 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input:-ms-input-placeholder,
.c3 > .input > textarea:-ms-input-placeholder,
.select__search .c3 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input::placeholder,
.c3 > .input > textarea::placeholder,
.select__search .c3 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input[type="search"],
.c3 > .input > textarea[type="search"],
.select__search .c3 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c3 > .input > input[type="search"]::-webkit-search-cancel-button,
.c3 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c3 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c3 > .input > input[type="search"]::-ms-clear,
.c3 > .input > textarea[type="search"]::-ms-clear,
.select__search .c3 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c3 > .input > input[role="combobox"],
.c3 > .input > textarea[role="combobox"],
.select__search .c3 > .input input[role="combobox"] {
  cursor: pointer;
}

.c3 > .input > .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c3 > .input > .icon.left {
  margin-left: 16px;
}

.c3 > .input > .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c3 > .input > .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c3 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c3 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c3 .input.dropdown {
  cursor: pointer;
}

.c3 input[type="number"] {
  -moz-appearance: textfield;
}

.c3 input[type="number"]::-webkit-inner-spin-button,
.c3 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3 .prefix,
.c3 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c2 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 #cancel-button {
  margin: 0 8px;
}

.c0 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c4 {
  display: inline-block;
  width: auto;
}

.c4 .appear-enter {
  opacity: 0;
}

.c4 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c4 .appear-exit {
  opacity: 1;
}

.c4 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c5 {
  padding: 0 4px 0 8px;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c1 .input {
  overflow: unset;
}

.c1 .prefix {
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 3px 0 0 3px;
}

.c1 .prefix .popover__trigger {
  height: 100%;
}

@media only screen and (max-width:) {
  .c1 .input input {
    font-size: 16px;
  }
}

<div
  style={
    Object {
      "height": 400,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="wrapped c3"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
            onMouseDown={[Function]}
          >
            <div
              className="prefix"
            >
              <div
                className="c4"
                width="auto"
              >
                <div
                  className="popover__trigger"
                  id="trigger"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="c5"
                    disabled={false}
                  >
                    US 
                    +
                    1
                    <svg
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m12 12.5857864 3.2928932-3.29289318c.3905243-.39052429 1.0236893-.39052429 1.4142136 0s.3905243 1.02368928 0 1.41421358l-4 4c-.3905243.3905243-1.0236893.3905243-1.4142136 0l-3.99999998-4c-.39052429-.3905243-.39052429-1.02368929 0-1.41421358s1.02368927-.39052429 1.41421356 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <input
              className="wrapped"
              data-testid="national-number-input"
              disabled={false}
              inputMode="tel"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInvalid={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="messagesContainer"
      />
    </div>
  </div>
  <button
    onClick={[Function]}
  >
    default to BR
  </button>
  <button
    onClick={[Function]}
  >
    default to US
  </button>
  <button
    onClick={[Function]}
  >
    set number
  </button>
  <button
    onClick={[Function]}
  >
    clear number
  </button>
</div>
`;

exports[`Storyshots Form|Phone Input Custom Texts 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c3 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 > .input > input,
.select__search .c3 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c3 > .input > textarea {
  padding: 16px;
}

.c3 > .input > input,
.c3 > .input > textarea,
.select__search .c3 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c3 > .input > input::-webkit-input-placeholder,
.c3 > .input > textarea::-webkit-input-placeholder,
.select__search .c3 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input::-moz-placeholder,
.c3 > .input > textarea::-moz-placeholder,
.select__search .c3 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input:-ms-input-placeholder,
.c3 > .input > textarea:-ms-input-placeholder,
.select__search .c3 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input::placeholder,
.c3 > .input > textarea::placeholder,
.select__search .c3 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input[type="search"],
.c3 > .input > textarea[type="search"],
.select__search .c3 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c3 > .input > input[type="search"]::-webkit-search-cancel-button,
.c3 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c3 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c3 > .input > input[type="search"]::-ms-clear,
.c3 > .input > textarea[type="search"]::-ms-clear,
.select__search .c3 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c3 > .input > input[role="combobox"],
.c3 > .input > textarea[role="combobox"],
.select__search .c3 > .input input[role="combobox"] {
  cursor: pointer;
}

.c3 > .input > .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c3 > .input > .icon.left {
  margin-left: 16px;
}

.c3 > .input > .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c3 > .input > .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c3 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c3 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c3 .input.dropdown {
  cursor: pointer;
}

.c3 input[type="number"] {
  -moz-appearance: textfield;
}

.c3 input[type="number"]::-webkit-inner-spin-button,
.c3 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3 .prefix,
.c3 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c2 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 #cancel-button {
  margin: 0 8px;
}

.c0 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c4 {
  display: inline-block;
  width: auto;
}

.c4 .appear-enter {
  opacity: 0;
}

.c4 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c4 .appear-exit {
  opacity: 1;
}

.c4 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c5 {
  padding: 0 4px 0 8px;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c1 .input {
  overflow: unset;
}

.c1 .prefix {
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 3px 0 0 3px;
}

.c1 .prefix .popover__trigger {
  height: 100%;
}

@media only screen and (max-width:) {
  .c1 .input input {
    font-size: 16px;
  }
}

<div
  style={
    Object {
      "height": 400,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="wrapped c3"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
            onMouseDown={[Function]}
          >
            <div
              className="prefix"
            >
              <div
                className="c4"
                width="auto"
              >
                <div
                  className="popover__trigger"
                  id="trigger"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="c5"
                    disabled={false}
                  >
                    US 
                    +
                    1
                    <svg
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m12 12.5857864 3.2928932-3.29289318c.3905243-.39052429 1.0236893-.39052429 1.4142136 0s.3905243 1.02368928 0 1.41421358l-4 4c-.3905243.3905243-1.0236893.3905243-1.4142136 0l-3.99999998-4c-.39052429-.3905243-.39052429-1.02368929 0-1.41421358s1.02368927-.39052429 1.41421356 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <input
              className="wrapped"
              data-testid="national-number-input"
              disabled={false}
              inputMode="tel"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInvalid={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="messagesContainer"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Form|Phone Input Disabled 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: rgba(0,0,0,0.16);
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c3 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 > .input > input,
.select__search .c3 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c3 > .input > textarea {
  padding: 16px;
}

.c3 > .input > input,
.c3 > .input > textarea,
.select__search .c3 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: rgba(0,0,0,0.32);
  background: none;
}

.c3 > .input > input::-webkit-input-placeholder,
.c3 > .input > textarea::-webkit-input-placeholder,
.select__search .c3 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input::-moz-placeholder,
.c3 > .input > textarea::-moz-placeholder,
.select__search .c3 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input:-ms-input-placeholder,
.c3 > .input > textarea:-ms-input-placeholder,
.select__search .c3 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input::placeholder,
.c3 > .input > textarea::placeholder,
.select__search .c3 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input[type="search"],
.c3 > .input > textarea[type="search"],
.select__search .c3 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c3 > .input > input[type="search"]::-webkit-search-cancel-button,
.c3 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c3 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c3 > .input > input[type="search"]::-ms-clear,
.c3 > .input > textarea[type="search"]::-ms-clear,
.select__search .c3 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c3 > .input > input[role="combobox"],
.c3 > .input > textarea[role="combobox"],
.select__search .c3 > .input input[role="combobox"] {
  cursor: default;
}

.c3 > .input > .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c3 > .input > .icon.left {
  margin-left: 16px;
}

.c3 > .input > .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c3 > .input > .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c3 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c3 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c3 .input.dropdown {
  cursor: default;
}

.c3 input[type="number"] {
  -moz-appearance: textfield;
}

.c3 input[type="number"]::-webkit-inner-spin-button,
.c3 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3 .prefix,
.c3 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: rgba(0,0,0,0.16);
  color: rgba(0,0,0,0.32);
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c2 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 #cancel-button {
  margin: 0 8px;
}

.c0 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c4 {
  display: inline-block;
  width: auto;
}

.c4 .appear-enter {
  opacity: 0;
}

.c4 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c4 .appear-exit {
  opacity: 1;
}

.c4 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c5 {
  padding: 0 4px 0 8px;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.c1 .input {
  overflow: unset;
}

.c1 .prefix {
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 3px 0 0 3px;
}

.c1 .prefix .popover__trigger {
  height: 100%;
}

@media only screen and (max-width:) {
  .c1 .input input {
    font-size: 16px;
  }
}

<div
  style={
    Object {
      "height": 400,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="wrapped c3"
          disabled={true}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
            onMouseDown={[Function]}
          >
            <div
              className="prefix"
            >
              <div
                className="c4"
                width="auto"
              >
                <div
                  className="popover__trigger"
                  id="trigger"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="c5"
                    disabled={true}
                  >
                    US 
                    +
                    1
                    <svg
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m12 12.5857864 3.2928932-3.29289318c.3905243-.39052429 1.0236893-.39052429 1.4142136 0s.3905243 1.02368928 0 1.41421358l-4 4c-.3905243.3905243-1.0236893.3905243-1.4142136 0l-3.99999998-4c-.39052429-.3905243-.39052429-1.02368929 0-1.41421358s1.02368927-.39052429 1.41421356 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <input
              className="wrapped"
              data-testid="national-number-input"
              disabled={true}
              inputMode="tel"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInvalid={[Function]}
              type="text"
              value="(213) 373-4253"
            />
          </div>
        </div>
      </div>
      <div
        className="messagesContainer"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Form|Phone Input With Priority Countries 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c3 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 > .input > input,
.select__search .c3 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c3 > .input > textarea {
  padding: 16px;
}

.c3 > .input > input,
.c3 > .input > textarea,
.select__search .c3 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c3 > .input > input::-webkit-input-placeholder,
.c3 > .input > textarea::-webkit-input-placeholder,
.select__search .c3 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input::-moz-placeholder,
.c3 > .input > textarea::-moz-placeholder,
.select__search .c3 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input:-ms-input-placeholder,
.c3 > .input > textarea:-ms-input-placeholder,
.select__search .c3 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input::placeholder,
.c3 > .input > textarea::placeholder,
.select__search .c3 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input[type="search"],
.c3 > .input > textarea[type="search"],
.select__search .c3 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c3 > .input > input[type="search"]::-webkit-search-cancel-button,
.c3 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c3 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c3 > .input > input[type="search"]::-ms-clear,
.c3 > .input > textarea[type="search"]::-ms-clear,
.select__search .c3 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c3 > .input > input[role="combobox"],
.c3 > .input > textarea[role="combobox"],
.select__search .c3 > .input input[role="combobox"] {
  cursor: pointer;
}

.c3 > .input > .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c3 > .input > .icon.left {
  margin-left: 16px;
}

.c3 > .input > .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c3 > .input > .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c3 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c3 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c3 .input.dropdown {
  cursor: pointer;
}

.c3 input[type="number"] {
  -moz-appearance: textfield;
}

.c3 input[type="number"]::-webkit-inner-spin-button,
.c3 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3 .prefix,
.c3 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c2 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 #cancel-button {
  margin: 0 8px;
}

.c0 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c4 {
  display: inline-block;
  width: auto;
}

.c4 .appear-enter {
  opacity: 0;
}

.c4 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c4 .appear-exit {
  opacity: 1;
}

.c4 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c5 {
  padding: 0 4px 0 8px;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c1 .input {
  overflow: unset;
}

.c1 .prefix {
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 3px 0 0 3px;
}

.c1 .prefix .popover__trigger {
  height: 100%;
}

@media only screen and (max-width:) {
  .c1 .input input {
    font-size: 16px;
  }
}

<div
  style={
    Object {
      "height": 400,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="wrapped c3"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
            onMouseDown={[Function]}
          >
            <div
              className="prefix"
            >
              <div
                className="c4"
                width="auto"
              >
                <div
                  className="popover__trigger"
                  id="trigger"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="c5"
                    disabled={false}
                  >
                    US 
                    +
                    1
                    <svg
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m12 12.5857864 3.2928932-3.29289318c.3905243-.39052429 1.0236893-.39052429 1.4142136 0s.3905243 1.02368928 0 1.41421358l-4 4c-.3905243.3905243-1.0236893.3905243-1.4142136 0l-3.99999998-4c-.39052429-.3905243-.39052429-1.02368929 0-1.41421358s1.02368927-.39052429 1.41421356 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <input
              className="wrapped"
              data-testid="national-number-input"
              disabled={false}
              inputMode="tel"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInvalid={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="messagesContainer"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Form|Phone Input With State 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c6 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c3 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 > .input > input,
.select__search .c3 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c3 > .input > textarea {
  padding: 16px;
}

.c3 > .input > input,
.c3 > .input > textarea,
.select__search .c3 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c3 > .input > input::-webkit-input-placeholder,
.c3 > .input > textarea::-webkit-input-placeholder,
.select__search .c3 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input::-moz-placeholder,
.c3 > .input > textarea::-moz-placeholder,
.select__search .c3 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input:-ms-input-placeholder,
.c3 > .input > textarea:-ms-input-placeholder,
.select__search .c3 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input::placeholder,
.c3 > .input > textarea::placeholder,
.select__search .c3 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input[type="search"],
.c3 > .input > textarea[type="search"],
.select__search .c3 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c3 > .input > input[type="search"]::-webkit-search-cancel-button,
.c3 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c3 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c3 > .input > input[type="search"]::-ms-clear,
.c3 > .input > textarea[type="search"]::-ms-clear,
.select__search .c3 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c3 > .input > input[role="combobox"],
.c3 > .input > textarea[role="combobox"],
.select__search .c3 > .input input[role="combobox"] {
  cursor: pointer;
}

.c3 > .input > .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c3 > .input > .icon.left {
  margin-left: 16px;
}

.c3 > .input > .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c3 > .input > .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c3 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c3 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c3 .input.dropdown {
  cursor: pointer;
}

.c3 input[type="number"] {
  -moz-appearance: textfield;
}

.c3 input[type="number"]::-webkit-inner-spin-button,
.c3 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3 .prefix,
.c3 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c2 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 #cancel-button {
  margin: 0 8px;
}

.c0 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c4 {
  display: inline-block;
  width: auto;
}

.c4 .appear-enter {
  opacity: 0;
}

.c4 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c4 .appear-exit {
  opacity: 1;
}

.c4 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c5 {
  padding: 0 4px 0 8px;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c1 .input {
  overflow: unset;
}

.c1 .prefix {
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 3px 0 0 3px;
}

.c1 .prefix .popover__trigger {
  height: 100%;
}

@media only screen and (max-width:) {
  .c1 .input input {
    font-size: 16px;
  }
}

<div
  style={
    Object {
      "height": 400,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="wrapped c3"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
            onMouseDown={[Function]}
          >
            <div
              className="prefix"
            >
              <div
                className="c4"
                width="auto"
              >
                <div
                  className="popover__trigger"
                  id="trigger"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="c5"
                    disabled={false}
                  >
                    US 
                    +
                    1
                    <svg
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m12 12.5857864 3.2928932-3.29289318c.3905243-.39052429 1.0236893-.39052429 1.4142136 0s.3905243 1.02368928 0 1.41421358l-4 4c-.3905243.3905243-1.0236893.3905243-1.4142136 0l-3.99999998-4c-.39052429-.3905243-.39052429-1.02368929 0-1.41421358s1.02368927-.39052429 1.41421356 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <input
              className="wrapped"
              data-testid="national-number-input"
              disabled={false}
              inputMode="tel"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInvalid={[Function]}
              type="text"
              value=""
            />
          </div>
          <div
            className="label"
          >
            <div
              className="labelText c6 c7"
              fontWeight="title"
              letterSpacing="2px"
              size={14}
              type="#2f313a"
            >
              Value -&gt; ""
            </div>
          </div>
        </div>
      </div>
      <div
        className="messagesContainer"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Form|Phone Input With Tooltip Props 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c3 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 > .input > input,
.select__search .c3 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c3 > .input > textarea {
  padding: 16px;
}

.c3 > .input > input,
.c3 > .input > textarea,
.select__search .c3 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c3 > .input > input::-webkit-input-placeholder,
.c3 > .input > textarea::-webkit-input-placeholder,
.select__search .c3 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input::-moz-placeholder,
.c3 > .input > textarea::-moz-placeholder,
.select__search .c3 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input:-ms-input-placeholder,
.c3 > .input > textarea:-ms-input-placeholder,
.select__search .c3 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input::placeholder,
.c3 > .input > textarea::placeholder,
.select__search .c3 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c3 > .input > input[type="search"],
.c3 > .input > textarea[type="search"],
.select__search .c3 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c3 > .input > input[type="search"]::-webkit-search-cancel-button,
.c3 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c3 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c3 > .input > input[type="search"]::-ms-clear,
.c3 > .input > textarea[type="search"]::-ms-clear,
.select__search .c3 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c3 > .input > input[role="combobox"],
.c3 > .input > textarea[role="combobox"],
.select__search .c3 > .input input[role="combobox"] {
  cursor: pointer;
}

.c3 > .input > .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c3 > .input > .icon.left {
  margin-left: 16px;
}

.c3 > .input > .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c3 > .input > .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c3 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c3 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c3 .input.dropdown {
  cursor: pointer;
}

.c3 input[type="number"] {
  -moz-appearance: textfield;
}

.c3 input[type="number"]::-webkit-inner-spin-button,
.c3 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3 .prefix,
.c3 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c2 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 #cancel-button {
  margin: 0 8px;
}

.c0 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c4 {
  display: inline-block;
  width: auto;
}

.c4 .appear-enter {
  opacity: 0;
}

.c4 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c4 .appear-exit {
  opacity: 1;
}

.c4 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c5 {
  padding: 0 4px 0 8px;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c1 .input {
  overflow: unset;
}

.c1 .prefix {
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 3px 0 0 3px;
}

.c1 .prefix .popover__trigger {
  height: 100%;
}

@media only screen and (max-width:) {
  .c1 .input input {
    font-size: 16px;
  }
}

<div
  style={
    Object {
      "height": 400,
    }
  }
>
  <div
    style={
      Object {
        "height": 360,
      }
    }
  />
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="wrapped c3"
          disabled={false}
          onClick={[Function]}
          type="text"
        >
          <div
            className="input"
            onMouseDown={[Function]}
          >
            <div
              className="prefix"
            >
              <div
                className="c4"
                width="auto"
              >
                <div
                  className="popover__trigger"
                  id="trigger"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="c5"
                    disabled={false}
                  >
                    US 
                    +
                    1
                    <svg
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m12 12.5857864 3.2928932-3.29289318c.3905243-.39052429 1.0236893-.39052429 1.4142136 0s.3905243 1.02368928 0 1.41421358l-4 4c-.3905243.3905243-1.0236893.3905243-1.4142136 0l-3.99999998-4c-.39052429-.3905243-.39052429-1.02368929 0-1.41421358s1.02368927-.39052429 1.41421356 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <input
              className="wrapped"
              data-testid="national-number-input"
              disabled={false}
              inputMode="tel"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInvalid={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="messagesContainer"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Default 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

<div>
  <div
    className="labelText c0 c1"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="#2f313a"
  >
    Default Label
  </div>
</div>
`;

exports[`Storyshots Label Disabled 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: rgba(0,0,0,0.32);
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

<div>
  <div
    className="labelText c0 c1"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="rgba(0, 0, 0, 0.32)"
  >
    Disabled Label
  </div>
</div>
`;

exports[`Storyshots Label Focused 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #3498db;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

<div>
  <div
    className="labelText c0 c1"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="#3498db"
  >
    Focused Label
  </div>
</div>
`;

exports[`Storyshots Label Invalid 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #dd3311;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

<div>
  <div
    className="labelText c0 c1"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="#dd3311"
  >
    Invalid Label
  </div>
</div>
`;

exports[`Storyshots Label Protected and disabled 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

<div>
  <div
    className="labelText c0 c1"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="#2f313a"
  >
    Protected Label
  </div>
</div>
`;

exports[`Storyshots Label With more info 1`] = `
.c5 {
  position: relative;
  display: inline-block;
}

.c5 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c5 .appear-enter {
  opacity: 0;
}

.c5 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c5 .appear-exit {
  opacity: 1;
}

.c5 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c4 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c3 .tooltip {
  margin-left: -4px;
}

.c3 .icon {
  display: inline-block;
  margin: 0 8px;
  cursor: pointer;
  color: #59636f;
}

.c3 .icon:hover,
.c3 .hovered {
  color: #3498db;
}

.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c2 {
  position: relative;
  top: -1px;
}

<div>
  <div
    className="labelText c0 c1"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="#2f313a"
  >
    Default Label
  </div>
  <div
    className="moreInfo c2 c3"
  >
    <div
      className="text  c4"
      fontWeight="title"
      size={16}
      type="#59636f"
    />
    <div
      className="icon c5"
    >
      <div
        className="hit-area"
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      />
      <i
        className="wg-question"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Label With more info right aligned 1`] = `
.c5 {
  position: relative;
  display: inline-block;
}

.c5 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c5 .appear-enter {
  opacity: 0;
}

.c5 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c5 .appear-exit {
  opacity: 1;
}

.c5 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c4 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c3 .tooltip {
  margin-right: -4px;
}

.c3 .icon {
  display: inline-block;
  margin: 0 8px;
  cursor: pointer;
  color: #59636f;
}

.c3 .icon:hover,
.c3 .hovered {
  color: #3498db;
}

.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c2 {
  position: relative;
  top: -1px;
}

<div>
  <div
    className="labelText c0 c1"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="#2f313a"
  >
    Default Label
  </div>
  <div
    className="moreInfo c2 c3"
  >
    <div
      className="text  c4"
      fontWeight="title"
      size={16}
      type="#59636f"
    />
    <div
      className="icon c5"
    >
      <div
        className="hit-area"
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      />
      <i
        className="wg-question"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Label extended style 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c1 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c0 {
  border: dotted 4px sienna;
}

.c0::after {
  display: block;
  content: '';
  clear: both;
}

<div
  className="c0"
>
  <div
    className="labelText c1 c2"
    fontWeight="title"
    letterSpacing="2px"
    size={14}
    type="#2f313a"
  >
    Default Label
  </div>
</div>
`;
